# adventofcode

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  day1.cpp  test.txt
day1/: CMakeLists.txt  Makefile  test.txt  tmp.txt
day1/inc/: day1.h
day1/src/: day1.cpp
day1/test/: day1test.cpp
day2/: CMakeLists.txt
day2/inc/: day2.h
day2/src/: day2.cpp  main.cpp
day2/test/: day2test.cpp
day3/: CMakeLists.txt
day3/inc/: day3.h
day3/src/: day3.cpp  main.cpp
day3/test/: day3test.cpp
day4/: day4.py
day5/: day5.py
template/: CMakeLists.txt
